src/tests/snapshots/nyx__tests__window_opening__check_target_size@omT-dwU-dhP0.5-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-maximized true\n    default-column-width {  }\n    default-window-height { proportion 0.5; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1272 × 352, bounds: 1272 × 712, states: []

post-map configures:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]
size: 0 × 352, bounds: 1272 × 712, states: [Activated]
